--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,34 @@
     background-color: #06435f !important;
 }
 .img-border{
+    
+    box-shadow: 1px 1px 10px #06435f;
+    border: 5px solid #fff;
+    border-radius: 5px;
 
 }
 .font-marhey{
     font-family: 'Marhey', sans-serif;
 }
+h1{
+    color:#fff;
+    text-shadow: 5px 5px 10px black;
+}
+h2{
+    color: #1283b9;
+    text-decoration: #1283b9 wavy underline;
+}
+
+.kepgrid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 15px;
+    grid-row-gap: 15px;
+}
+.kep1 { grid-area: 1 / 1 / 3 / 3; }
+.kep2 { grid-area: 1 / 3 / 2 / 4; }
+.kep3 { grid-area: 1 / 4 / 2 / 5; }
+.kep4 { grid-area: 3 / 1 / 4 / 2; }
+.kep5 { grid-area: 3 / 2 / 4 / 3; }
+.kep6 { grid-area: 2 / 3 / 4 / 5; }
